--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</div>
 			<div>
 				<input type="radio" id="louie" name="drone" value="louie" />
-				<label for="louie">Louie</label>
+				<label for="louie">Hello!</label>
 			</div>
 		</fieldset>
 		<a href="result.html">Check your answer</a>
