--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<!--
 		This is where you should link your JS file.
 	-->
-	<script src="js/scripts.js"></script>
+	<script src="js/scripts.js" type="module"></script>
 </body>
 
 </html>
